commit before finalize 001

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/PointOfSalesSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\Gihan Chathuranga\\Desktop\\JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
